name:                shams
version:             0.2.0.0
synopsis:            40 Rules of Love, Shams of Tabriz
description:         Please see README.md
homepage:            https://github.com/rimbaudcode/shams#readme
license:             BSD3
license-file:        LICENSE.md
author:              art rimbaud
maintainer:          rimbaudcode[at]gmail(DoT)com
copyright:           (c) 2016 rimbaudcode
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:          data/*.txt

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Shams
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1 && < 1.2
                     , filepath >= 1.4 && < 1.5
  other-modules:       Paths_shams
  default-language:    Haskell2010
  ghc-options:       -fdefer-type-errors
                     -Wall
                     -fforce-recomp
                     -fobject-code
                     -fprof-auto
                     -funbox-strict-fields
                     -fwarn-implicit-prelude
                     -fwarn-incomplete-patterns
                     -fwarn-incomplete-record-updates
                     -fwarn-incomplete-uni-patterns
                     -fwarn-missing-signatures
                     -fwarn-monomorphism-restriction
                     -fwarn-name-shadowing
                     -fwarn-orphans
                     -fwarn-overlapping-patterns
                     -fwarn-tabs
                     -fwarn-unused-do-bind
                     -fwarn-unused-imports
                     -j4
                     -O2
                     -fexcess-precision
                     -optc-O2

executable shams
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , shams
  default-language:    Haskell2010
  other-modules:       Paths_shams
  ghc-options:       -fdefer-type-errors
                     -Wall
                     -fforce-recomp
                     -fobject-code
                     -fprof-auto
                     -funbox-strict-fields
                     -fwarn-implicit-prelude
                     -fwarn-incomplete-patterns
                     -fwarn-incomplete-record-updates
                     -fwarn-incomplete-uni-patterns
                     -fwarn-missing-signatures
                     -fwarn-monomorphism-restriction
                     -fwarn-name-shadowing
                     -fwarn-orphans
                     -fwarn-overlapping-patterns
                     -fwarn-tabs
                     -fwarn-unused-do-bind
                     -fwarn-unused-imports
                     -j4
                     -rtsopts
                     -threaded
                     -with-rtsopts=-N
                     -O2
                     -fexcess-precision
                     -optc-O2

test-suite shams-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shams
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rimbaudcode/shams
